fix: change favicon url to assets  and add raleway font for test

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="author" content="X-Network" />
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
 
   <!-- font style -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
